<resources>
    <string name="app_name">Medical_CalculatorEricW</string>
    <string name="txtTitle">Convert Patient Weight</string>
    <string name="txtWeight">Weight of Patient</string>
    <string name="btnConvert">Convert Weight</string>
    <string name="radLbToKilo">Convert Pounds to Kilograms</string>
    <string name="radKiloToLb">Convert Kilograms to Pounds</string>
    <string name="txtResult">Result</string>
</resources>
